Scenarios update.